Leigh Updates from November 2014

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -52,7 +52,7 @@ title: WM Spina Bifida
         <blockquote>
           <div class="quote-wrapper">
             <p>At first, I worried about what Grayden would take away from our lives. I never could have imagined how much he would add.</p>
-            <footer id="act"><cite title="Source Title">Kelly, Parent Grayden's Mom</cite></footer>
+            <footer id="act"><cite title="Source Title">Kelly, Grayden's Mom</cite></footer>
           </div>
         </blockquote>
       </div><!--/col-->
