--- a/source/views/_article_2.html.erb
+++ b/source/views/_article_2.html.erb
@@ -56,47 +56,47 @@
     <div class="container-fluid tab-content">
       <div class="tab-pane fade in active" id="about_wmsbo">
         <div class="row">
-          <div class="col-sm-4 col-xs-12">
-            <h2>Meet the board</h2>
-            <p>Our Board of Directors focuses on ways to help those living with Spina Bifida in West Michigan. We meet throughout the year to plan events like our Annual Stroll N' Roll, foster community, and advocate for awareness in the West Michigan Region.</p>
-          </div>
-          <ul class="information-roll col-sm-8 col-xs-12">
+          <h2>Meet the board</h2>
+          <p>Our Board of Directors focuses on ways to help those living with Spina Bifida in West Michigan. We meet throughout the year to plan events like our Annual Stroll N' Roll, foster community, and advocate for awareness in the West Michigan Region.</p>
+
+          <ul class="information-roll">
             <li>
-              <%= image_tag '/images/carol.png' %>
-              <strong>Carol Carpenter</strong>
+              <strong>Nick Phillips</strong>
               President
             </li>
+
             <li>
-              <%= image_tag '/images/jodie.png' %>
               <strong>Jodie Anderson</strong>
               Vice President
             </li>
+
             <li>
-            <%= image_tag '/images/bonni.png' %>
-              <strong>Bonni Melton</strong>
+              <strong>Leigh Gibbs</strong>
               Treasurer
             </li>
 
             <li>
-            <%= image_tag '/images/emily.png' %>
               <strong>Emily Bush</strong>
               Secretary
             </li>
 
             <li>
-              <%= image_tag '/images/maryjo.png' %>
-              <strong>MaryJo Boerman</strong>
+              <strong>Jamie Freitag</strong>
               Board member
             </li>
 
             <li>
-              <%= image_tag '/images/leigh.png' %>
-              <strong>Leigh Gibbs</strong>
+              <strong>Kelly Goff</strong>
               Board member
             </li>
+
             <li>
-              <%= image_tag '/images/jamie.png' %>
-              <strong>Jamie Freitag</strong>
+              <strong>Shannan Kooistra</strong>
+              Board member
+            </li>
+
+            <li>
+              <strong>Carol Carpenter</strong>
               Board member
             </li>
           </ul>
@@ -124,10 +124,8 @@
       <div class="tab-pane fade" id="membership">
         <h2>Letter from the Board</h2>
         <p>Our parents are down to earth and friendly. Each member is full of personality and contributes to the dynamic of the group. We rely on each other for advice and encouragement, knowing that every parent has a "now what" in front of them that another member has already been through.</p>
-        <p>As a member you have access to a wide variety of resources, discounts and scholarships.</p>
+        <p>As a member, you have access to a wide variety of events, resources, and scholarships.</p>
         <p>We would love to share our lives with you to!</p>
-        <p>[Benefits]</p>
-        <p>[Join Us]</p>
       </div>
     </div><!--/container-->
   </div>
