--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -30,7 +30,7 @@ title: WM Spina Bifida
     </div><!--/row-->
   </div><!--/container-->
 
-  <%= partial "views/article_1" %>
+  <%= partial "views/section_resources" %>
 
   <%= partial "views/carousel_2" %>
 
@@ -38,13 +38,13 @@ title: WM Spina Bifida
     <div class="row">
       <h1 class="col-sm-5 col-xs-12">Roll with us.</h1>
       <p class="col-sm-7 col-xs-12">
-        Every year we host a family friendly event built to raise awareness about spina bifida and to celebrate those living with it.
-        <br /> <strong><%= link_to 'Learn more about Roll N’ Stroll', 'http://wmspinabifida.org/strollnroll/Home.html' %></strong>
+        Every year we host a family friendly event held to raise awareness about Spina Bifida and celebrate those living with it.
+        <br /> <strong><%= link_to 'Learn more about the Stroll \'N Roll.', 'http://wmspinabifida.org/strollnroll/Home.html' %></strong>
       </p>
     </div><!--/row-->
   </div><!--/container-->
 
-  <%= partial "views/article_2" %>
+  <%= partial "views/section_community" %>
 
   <div class="container-fluid">
     <div class="row">
@@ -59,7 +59,7 @@ title: WM Spina Bifida
     </div><!--/row-->
   </div><!--/container-->
 
-  <%= partial "views/article_3" %>
+  <%= partial "views/section_involved" %>
 </div><!--/wrapper-->
 
 <%= partial "views/footer" %>
