--- a/source/views/_navigation_primary.html.erb
+++ b/source/views/_navigation_primary.html.erb
@@ -1,7 +1,7 @@
 <div class="header-nav" id="navbar">
   <div class="container-fluid">
     <h1 class="main-identity scroll-top">
-      <%= link_to 'West Michigan Spina Bifida Organization', '#', :title => "top" %>
+      <%= link_to 'West Michigan Spina Bifida Organization', '/', :title => "top" %>
     </h1>
 
     <div class="navbar-trigger-container">
