--- a/source/views/_section_community.html.erb
+++ b/source/views/_section_community.html.erb
@@ -7,11 +7,7 @@
     <div class="container-fluid">
       <div class="row">
         <h1>We're here. We care</h1>
-        <p class="description">There are plenty of reasons to join our community. We hold events.
-        We offer financial assistance to attend educations conferences.
-        We offer resources and scholarships. But if you ask any one of our
-        members, they’ll tell you the same: the biggest group benefit is the
-        relationships they’ve established with each other.</p>
+        <p class="description opening-content">There are plenty of reasons to join our community. We hold events. We offer financial assistance. We provide resources and scholarships. But, if you ask any one of our members, they'll tell you the same: the biggest benefit is the relationships they've established with each other.</p>
       </div>
 
       <!-- Nav tabs -->
@@ -20,7 +16,7 @@
           <% link_to '#about_wmsbo', "data-toggle" => "tab" do %>
             <span class="boundary-box">
               <strong>Who we are</strong>
-              <span class="section-nav-item-detail">WM spina bifida is a support system for families living with spina bifida.</span>
+              <span class="section-nav-item-detail">WMSBO is a support system for families living with spina bifida.</span>
             </span>
             <span class="tab-indicator"></span>
           <% end %>
@@ -57,9 +53,10 @@
       <div class="tab-pane fade in active" id="about_wmsbo">
         <div class="row">
           <h2>Meet the board</h2>
-          <p>Our Board of Directors focuses on ways to help those living with Spina Bifida in West Michigan. We meet throughout the year to plan events like our Annual Stroll N' Roll, foster community, and advocate for awareness in the West Michigan Region.</p>
 
-          <ul class="information-roll">
+          <p class="opening-content">Our Board of Directors focuses on ways to help those living with Spina Bifida in West Michigan. We meet throughout the year to plan events (like our Annual Stroll N' Roll), foster community, and advocate for awareness in the West Michigan region.</p>
+
+          <ul>
             <li>
               <strong>Nick Phillips</strong>
               President
@@ -107,25 +104,27 @@
         <h2>Partners</h2>
         <ul class="information-roll">
           <li>
-            <h3>Mary Free Bed Foundation (logo)</h3>
+            <h3>Mary Free Bed Foundation</h3> <%= image_tag '/images/logo-mary-free-bed.jpg' %>
           </li>
           <li>
-            <h3>Helen DeVos Children’s Hospital  (logo)</h3>
+            <h3>Helen DeVos Children's Hospital</h3> <%= image_tag '/images/logo-helen-devos.jpg' %>
           </li>
           <li>
-            <h3>Family Hope Foundation (listed)</h3>
+            <h3>Family Hope Foundation</h3> <%= image_tag '/images/logo-family-hope-foundation.jpg' %>
           </li>
           <li>
-            <h3>University of Michigan (logo)</h3>
+            <h3>University of Michigan</h3> <%= image_tag '/images/logo-uofm.jpg' %>
           </li>
         </ul>
       </div>
 
       <div class="tab-pane fade" id="membership">
         <h2>Letter from the Board</h2>
-        <p>Our parents are down to earth and friendly. Each member is full of personality and contributes to the dynamic of the group. We rely on each other for advice and encouragement, knowing that every parent has a "now what" in front of them that another member has already been through.</p>
-        <p>As a member, you have access to a wide variety of events, resources, and scholarships.</p>
-        <p>We would love to share our lives with you to!</p>
+        <div class="opening-content">
+          <p>Our organization strives to provide families affected by Spina Bifida a support system that fosters a strong sense of community, raises awareness of the condition, advocates for each unique individual’s highest level of independence, and creates partnerships that promote Spina Bifida in a positive light. </p>
+          <p>As a member, you have access to a wide variety of events, resources, and scholarships.</p>
+          <p>We would love to share our lives with you too!</p>
+        </div>
       </div>
     </div><!--/container-->
   </div>
